--- a/css/app.css
+++ b/css/app.css
@@ -100,6 +100,7 @@
     border: 1px solid #a7a5a6;
     float: right;
     z-index: 0;
+    cursor:crosshair;
 }
 #loading{
     position: absolute;
