--- a/css/app.css
+++ b/css/app.css
@@ -106,6 +106,49 @@
     z-index: 0;
     cursor:crosshair;
 }
+.loader {
+  margin: 27% 0 0 60%;
+  font-size: 10px;
+  position: absolute;
+  z-index: 1005;
+  text-indent: -9999em;
+  border-top: 1.1em solid rgba(0, 0, 0, 0.5);
+  border-right: 1.1em solid rgba(0, 0, 0, 0.5);
+  border-bottom: 1.1em solid rgba(0, 0, 0, 0.5);
+  border-left: 1.1em solid #ffffff;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 0.8s infinite linear;
+  animation: load8 0.8s infinite linear;
+}
+
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 3em;
+  height: 3em;
+}
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
 #loading{
     position: absolute;
     left: 62%;
@@ -227,12 +270,16 @@ ul{
 }
 
 #map_reset .noref,#map_help .noref, #map_disclaimer .noref{
-     color:#5c728b;
+     color:#a54a36;
 }
 
 #map_reset .noref:hover,#map_help .noref:hover, #map_disclaimer .noref:hover{
     cursor:pointer;
-    color:#346f9a;
+    background-color: #725448;
+    color:#e6e6e6;
+    border-color:#e6e6e6;
+    padding:3px;
+    border-radius:3px;
 }
 
 #map_layers_toggle{
@@ -247,7 +294,7 @@ ul{
 #map_help{
     font-size: 11px;
     position: absolute;
-    bottom:0;
+    bottom:4px;
     left:30%;
     z-index: 101;
 }
@@ -264,7 +311,7 @@ ul{
 #map_disclaimer{
     font-size: 11px;
     position: absolute;
-    bottom:0;
+    bottom:4px;
     right:0;
     z-index: 101;
 }
@@ -525,16 +572,19 @@ ul{
         display:none;
     }
     #mnhouselink, #mnsenlink, #ushouselink, #ussenatelink, #ussenate2link{
-        padding: 5px;
-        border-radius: 4px;
-        color:#5c728b;
+        padding: 3px;
+        border-radius: 3px;
+        color:#a54a36;
+        /*background-color: #a54a36;*/
+        border-color:#e6e6e6;
         font-size:  11px;
         font-style:     italic;
 
     }
   #mnhouselink:hover, #mnsenlink:hover, #ushouselink:hover, #ussenatelink:hover, #ussenate2link:hover{
-    background-color: #3b3b3b;
-        color:#e6e6e6;
+    background-color: #725448;
+    color:#e6e6e6;
+    border-color:#e6e6e6;
   }
  
 /*Begin Responsive Web Design*/
