--- a/css/app.css
+++ b/css/app.css
@@ -28,7 +28,7 @@
 
 /*application css*/
 .contact{
-    color: #5c728b;
+    color: #a54a36;
     font-size: 11px;
     font-style: italic;
     padding: 5px;
