--- a/css/app.css
+++ b/css/app.css
@@ -101,6 +101,8 @@
 #mask ul{
     margin-top:-7px;
     font-size: 1.1em;
+    margin-left:0;
+    text-align: center;
 }
 #mask img{
     margin-left:31%;
@@ -112,7 +114,7 @@
 
 .helpers{
     color:#888;
-    margin: 15px 12px 0 -21px;
+    /*margin: 15px 12px 0 -21px;*/
     text-align: center;
     font-size: 0.9em;
 }
@@ -453,7 +455,7 @@ ul{
 }
 
 .center{
-    margin-left: 87px;
+    /*margin-left: 87px;*/
     color: #888;
 }
 #switchBasemap{
